[package]
name = "spruce_test"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"

jsonwebtoken = "9.3.1"
josekit = "0.8.3"
ulid = "1.2.0"
rand = "0.9.0"
rpassword = "7.3.1"
chrono = "0.4.40"
base64 = "0.21.7"

# HTTP client
reqwest = { version = "0.12.12", features = ["json"] }

# Error handling and logging
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# SQLite
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "sqlite"] }

[lib]
name = "core"
path = "src/lib.rs"

[[bin]]
name = "verifier"
path = "src/bin/verifier.rs"

[[bin]]
name = "keygen"
path = "src/bin/keygen.rs"

[[bin]]
name = "holder"
path = "src/bin/holder.rs"
